Automated update for task: java-fluid-dynamics-api